2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	buildbot/public_html/lgo.css: changed layout to have only one column
	per buildslave, with icons and tooltips to give details; and a totals
	row at the bottom.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* buildbot/template.html, buildbot/public_html/lgo.css,
	jhbuild/buildbot/status/web/__init__.py: cleaned up homepage HTML,
	removing extra classes and moving stuff to CSS.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py: let master honor the skip configuration
	variable.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: removed obsolete
	autogen-sh attributes, as there is now an automatic fallback to
	configure; marked some modules as missing a check target.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: added automatic fallback to configure
	if autogen.sh does not exist.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: import missing module and initialize
	correctly change notification.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: import missing twisted.python.log
	module.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py, jhbuild/buildbot/scheduler.py: updated
	scheduler to get commit notification via svn-commits-list (untested).

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: added a project parameter to the
	schedulers.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: look for buildbot in lib64/ subdirectory if
	necessary.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.24.modules: poppler-data do not have a check
	target.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated