@@ -213,16 +213,19 @@ table.ProjectSummary tbody td.feed {
 	padding-right: 2px;
 }
 
-th.offline {
+th.offline,
+th.idle,
+th.success {
 	background: white url(offline.png) center right no-repeat;
+	padding: 0 16px;
 }
 
 th.idle {
-	background: white url(idle.png) center right no-repeat;
+	background-image: url(idle.png);
 }
 
 th.building {
-	background: white url(building.png) center right no-repeat;
+	background-image: url(building.png);
 }
 
 td.success {
