@@ -1,5 +1,9 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* buildbot/public_html/lgo.css: added padding for long slave names.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/__init__.py,
 	buildbot/public_html/lgo.css: changed layout to have only one column
 	per buildslave, with icons and tooltips to give details; and a totals
